<resources>
    <string name="app_name">MVVM Login Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="add">Add</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
</resources>