<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".login.view.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_number"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="src_in"
                android:hint="@string/enter_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/enter_password"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="src_in"
                android:hint="@string/enter_password"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>